[refactor] 데이터 타입 최적화 및 불변 컬렉션 개선